[package]
name = "aoc_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
nom = { version = "7.1.3", features = ["alloc"] }
num = "0.4.1"
rayon = "1.8.0"
rustc-hash = "1.1.0"
